# driven

./: .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CNAME  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  index.html  params.json  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
docs/: Makefile  conf.py  dependencis.rst  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
driven/: __init__.py  _cobra_ext.py  config.py  stats.py  utils.py
driven/data_sets/: __init__.py  expression_profile.py  fluxes.py  normalization.py  normalization_functions.py  pax_db.py
driven/flux_analysis/: __init__.py  c13.py  fluxomics.py  gim3e.py  imat.py  metrics.py  profiling.py  proteomics.py  results.py  thermodynamics.py  transcriptomics.py
driven/flux_analysis/fit_objective/: __init__.py  evaluators.py  generators.py  optimization.py  variators.py
driven/generic/: adapter.py  normalization.py
driven/sensitivity_analysis/: __init__.py  flux_analysis.py
driven/vizualization/: escher_viewer.py  utils.py
driven/vizualization/plotting/: __init__.py  abstract.py  with_bokeh.py  with_ggplot.py  with_plotly.py
notebooks/: 13C_based_lMOMA_ROOM.ipynb  eflux.ipynb  getting_started.ipynb  gim3e.ipynb  gimme.ipynb  gx-fba.ipynb  imat.ipynb  import_data.ipynb  init.ipynb  made.ipynb  relatch.ipynb  visualization.ipynb
src/driven/: __init__.py  _cobra_ext.py  _version.py  stats.py  utils.py
src/driven/data_sets/: __init__.py  expression_profile.py  fluxes.py  pax_db.py
src/driven/flux_analysis/: gimme.py  profiling.py  results.py  transcriptomics.py
src/driven/fluxomics/: __init__.py  fluxomics.py
src/driven/generic/: __init__.py  normalization.py
src/driven/metabolomics/: __init__.py  thermodynamics.py
src/driven/omics/: __init__.py  fastcc.py  fastcore.py  gim3e.py  gimme.py  imat.py
src/driven/proteomics/: __init__.py
src/driven/transcriptomics/: __init__.py
src/driven/vizualization/: utils.py  (+1 more)
stylesheets/: styles.css
tests/: test_data_sets.py  test_flux_analysis.py  test_generic.py  test_utils.py
tests/assets/: blazier_et_al_2012.py  zur_et_al_2010.py
tests/test_data_sets/: conftest.py  test_expression_profile.csv  test_expression_profile.py  test_flux_constraints.csv  test_flux_constraints.py
tests/test_omics/: conftest.py  test_fastcc.py  test_fastcore.py  test_gimme.py  test_imat.py
(+8 files in other folders)
