[metadata]
name = driven
url = https://github.com/biosustain/driven
download_url = https://pypi.org/project/driven/
author = Novo Nordisk Foundation Center for Biosustainability, Technical University Denmark
author_email = niso@biosustain.dtu.dk
maintainer = Moritz E. Beber
maintainer_email = morbeb@biosustain.dtu.dk
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Bio-Informatics
license = Apache Software License Version 2.0
description = Implementation of novel and state-of-the-art methods in order to integrate omics' data with genome-scale constraint-based metabolic models.
long_description = file: README.rst
keywords =
    biology
    metabolism
    bioinformatics
    high-throughput
    omics
    data-driven
    integration
    genome-scale constraint-based metabolic model
    COBRA

[options]
zip_safe = True
install_requires =
    depinfo
    numpy
    pandas
    cobra
    altair
    six
    optlang
python_requires = >=2.7,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
packages = find:

[options.packages.find]
where = src

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude =
    __init__.py
    _version.py

[tool:pytest]
testpaths = tests

[isort]
line_length = 80
indent = 4
multi_line_output = 4
lines_after_imports = 2
known_first_party = driven
known_third_party =
    depinfo
    pytest
    numpy
    pandas
    cobra
    altair
    six
    optlang
    cameo
    inspyred
    sympy
    IPython

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = src/driven/_version.py
versionfile_build = driven/_version.py
tag_prefix =
parentdir_prefix = driven-
